# serializer version: 1
# name: TestRegistry.test_device_snapshot
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': '1',
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'schluterditraheat',
          'a1b2c3d4e5f60718',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'Schluter',
      'model': 'DITRA-HEAT-E-RS1',
      'model_id': None,
      'name': 'Foyer',
      'name_by_user': None,
      'serial_number': 'a1b2c3d4e5f60718',
      'sw_version': '3.7.10',
      'via_device_id': None,
    }),
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': <DeviceEntryType.SERVICE: 'service'>,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'schluterditraheat',
          'location_245001',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'Schluter',
      'model': None,
      'model_id': None,
      'name': 'Home',
      'name_by_user': None,
      'serial_number': None,
      'sw_version': None,
      'via_device_id': None,
    }),
  ])
# ---
# name: TestRegistry.test_entities_and_states_snapshot[binary_sensor.foyer_fault-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.foyer_fault',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fault',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Fault',
    'platform': 'schluterditraheat',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fault',
    'unique_id': 'a1b2c3d4e5f60718_fault',
    'unit_of_measurement': None,
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[binary_sensor.foyer_fault-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      'error_code': 0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Foyer Fault',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.foyer_fault',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[binary_sensor.foyer_gfci_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.foyer_gfci_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'GFCI Status',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'GFCI Status',
    'platform': 'schluterditraheat',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'gfci_status',
    'unique_id': 'a1b2c3d4e5f60718_gfci',
    'unit_of_measurement': None,
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[binary_sensor.foyer_gfci_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Foyer GFCI Status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.foyer_gfci_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[button.foyer_refresh-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.foyer_refresh',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Refresh',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Refresh',
    'platform': 'schluterditraheat',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'refresh',
    'unique_id': 'a1b2c3d4e5f60718_refresh',
    'unit_of_measurement': None,
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[button.foyer_refresh-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Foyer Refresh',
    }),
    'context': <ANY>,
    'entity_id': 'button.foyer_refresh',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[climate.foyer_floor_heat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 32.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'away',
        'frost_protection',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.foyer_floor_heat',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Foyer Floor Heat',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Foyer Floor Heat',
    'platform': 'schluterditraheat',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': 'a1b2c3d4e5f60718',
    'unit_of_measurement': None,
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[climate.foyer_floor_heat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'air_floor_mode': 'floor',
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 19.4,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Foyer Floor Heat',
      'group_name': 'Foyer',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.OFF: 'off'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 32.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'away',
        'frost_protection',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 21.1,
    }),
    'context': <ANY>,
    'entity_id': 'climate.foyer_floor_heat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[number.foyer_away_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 32.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 5.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.foyer_away_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Away setpoint',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Away setpoint',
    'platform': 'schluterditraheat',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'away_setpoint',
    'unique_id': 'a1b2c3d4e5f60718_away_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[number.foyer_away_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Foyer Away setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 32.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 5.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.foyer_away_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15.0',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[select.foyer_backlight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'always_on',
        'bedroom',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.foyer_backlight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Backlight',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:brightness-6',
    'original_name': 'Backlight',
    'platform': 'schluterditraheat',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'backlight',
    'unique_id': 'a1b2c3d4e5f60718_backlight',
    'unit_of_measurement': None,
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[select.foyer_backlight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Foyer Backlight',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:brightness-6',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'always_on',
        'bedroom',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.foyer_backlight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'always_on',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[select.foyer_keypad-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'unlocked',
        'locked',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.foyer_keypad',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Keypad',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:dialpad',
    'original_name': 'Keypad',
    'platform': 'schluterditraheat',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'keypad',
    'unique_id': 'a1b2c3d4e5f60718_keypad',
    'unit_of_measurement': None,
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[select.foyer_keypad-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Foyer Keypad',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:dialpad',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'unlocked',
        'locked',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.foyer_keypad',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unlocked',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[select.home_occupancy-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'home',
        'away',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.home_occupancy',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Occupancy',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:home-account',
    'original_name': 'Occupancy',
    'platform': 'schluterditraheat',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'occupancy',
    'unique_id': 'location_245001_occupancy',
    'unit_of_measurement': None,
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[select.home_occupancy-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Home Occupancy',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:home-account',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'home',
        'away',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.home_occupancy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[sensor.foyer_heating_output-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.foyer_heating_output',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heating Output',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Heating Output',
    'platform': 'schluterditraheat',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heating_output',
    'unique_id': 'a1b2c3d4e5f60718_heating_output',
    'unit_of_measurement': '%',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[sensor.foyer_heating_output-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power_factor',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Foyer Heating Output',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.foyer_heating_output',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[sensor.foyer_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.foyer_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'Power',
    'platform': 'schluterditraheat',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power',
    'unique_id': 'a1b2c3d4e5f60718_power',
    'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[sensor.foyer_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'power',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Foyer Power',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.foyer_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[sensor.foyer_wi_fi_signal-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.foyer_wi_fi_signal',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wi-Fi Signal',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.SIGNAL_STRENGTH: 'signal_strength'>,
    'original_icon': None,
    'original_name': 'Wi-Fi Signal',
    'platform': 'schluterditraheat',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wifi_signal',
    'unique_id': 'a1b2c3d4e5f60718_wifi_signal',
    'unit_of_measurement': 'dBm',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[sensor.foyer_wi_fi_signal-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'signal_strength',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Foyer Wi-Fi Signal',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'dBm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.foyer_wi_fi_signal',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-75',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[sensor.home_electricity_price-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.home_electricity_price',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Electricity price',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:cash',
    'original_name': 'Electricity price',
    'platform': 'schluterditraheat',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'electricity_price',
    'unique_id': 'location_245001_electricity_price',
    'unit_of_measurement': 'EUR/kWh',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[sensor.home_electricity_price-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Home Electricity price',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:cash',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'EUR/kWh',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.home_electricity_price',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0885',
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[switch.foyer_early_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.foyer_early_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Early start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:clock-start',
    'original_name': 'Early start',
    'platform': 'schluterditraheat',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'early_start',
    'unique_id': 'a1b2c3d4e5f60718_early_start',
    'unit_of_measurement': None,
  })
# ---
# name: TestRegistry.test_entities_and_states_snapshot[switch.foyer_early_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Foyer Early start',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:clock-start',
    }),
    'context': <ANY>,
    'entity_id': 'switch.foyer_early_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
